Improve Cypress coverage